day4 exercise 1 fix overflow in hero

--- a/src/exercises/day4/exercise1/components/Hero/style.css
+++ b/src/exercises/day4/exercise1/components/Hero/style.css
@@ -2,10 +2,13 @@
     background-color: #C7D0D9;
     
     height: 700px;
+    position: relative;
 
     display: flex;
     align-items: end;
     justify-content: center;
+
+    overflow: hidden;
 }
 
 .hero .running{
@@ -21,7 +24,6 @@
     width: 100%;
 
     left : -100px;
-    width: 100%;
     color: white;
     font-weight: bold;
 }
